Fix formatting and contrast in Homewortk

--- a/homework/style.css
+++ b/homework/style.css
@@ -139,7 +139,7 @@ h1 {
     display: block;
     padding: 16px 16px 8px 16px;
     background-color: #d8d8d8;
-    color: grey;
+    color: #2b2b2b;
     line-height: 32px;
 }
 
@@ -150,6 +150,7 @@ h1 {
 
 .child-condition {
     font-size: 12px;
+    margin-bottom: 0;
 }
 
 .left-container label {
